mapping exception validation
